force-app/main/default/objects/Courier_Tracking__c/Courier_Tracking__c.object-meta.xml
<CustomObject>
    <label>Courier Tracking</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Courier Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courier Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>