force-app/main/default/objects/Courier_Tracking__c/fields/Dispatched_On__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_On__c</fullName>
    <label>Dispatched On</label>
    <type>Date</type>
</CustomField>