force-app/main/default/objects/Courier_Tracking__c/fields/ReceivedBy_Phone__c.field-meta.xml
<CustomField>
    <fullName>ReceivedBy_Phone__c</fullName>
    <label>ReceivedBy Phone</label>
    <type>Phone</type>
</CustomField>